fix gap and negative margin (#1212)

--- a/themes/icore-open/_index.scss
+++ b/themes/icore-open/_index.scss
@@ -78,7 +78,7 @@ and spacing sets */
   $article-content-wrapper-padding-bottom: spacing.$spacing-300,
   $article-content-wrapper-padding-left: spacing.$spacing-200,
   $article-content-wrapper-max-width: 60rem,
-  $article-content-wrapper-gap: spacing.$spacing-250,
+  $article-content-wrapper-gap: spacing.$spacing-150,
   $article-content-wrapper-flex-direction: column,
   $article-content-wrapper-border-radius: border-radii.$border-radius-m,
 
